[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive", "usage", "help"] }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
default = ["logging", "metrics"]
logging = ["tracing", "tracing-subscriber"]
metrics = []
